ecmascript/parser/tests/test262-error-references/fail/19699bcdea35eb46.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/19699bcdea35eb46.js:1:17
  |
1 | 'use strict'; ('\4')
  |                 ^^

